<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/overviewtitle"
        android:textSize="@dimen/title"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:textColor="@color/titleText" />

    <TextView
        android:layout_marginTop="35dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/overviewsubhead"
        android:textSize="@dimen/subhead" />

    <TextView
        android:layout_marginTop="35dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/overviewtext"
        android:id="@+id/textView"
        android:layout_gravity="left|center_vertical" />

</LinearLayout>